# potatoe

./: .gitattributes  .gitignore  Makefile  PKGBUILD  README.md  potatoe  potatoe.py  potatoe.txt  quotes.txt
aur/: .SRCINFO  PKGBUILD
contrib/aur/: PKGBUILD
contrib/c/: Makefile  potatoe.c
contrib/d/: .gitignore  Makefile  potatoe  potatoe.d
contrib/dotnet/: .gitignore  Makefile  Program.cs  potatoe.csproj
contrib/go/: Makefile  go.mod  main  main.go
contrib/haskell/: .ghc.environment.x86_64-linux-9.4.8  .gitignore  Makefile  main.hi  main.hs  out
contrib/haskell/tmp/: main.hs
contrib/kotlin/: .gitignore  Makefile  potatoe.kt
contrib/nim/: .gitignore  potatoe.nim
contrib/perl/: potatoe.pl
contrib/python/: potatoe.py
contrib/rust/: .gitignore  Cargo.toml  Makefile
contrib/rust/src/: main.rs
nim/: Makefile  potatoe.nim
